Bug 270492 - tooltip for contacts with no avatar
Summary: tooltip for contacts with no avatar
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: git-latest
Platform: Unlisted Binaries Linux
: NOR minor
Target Milestone: 0.4.0
Assignee: Keith Rusler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-09 12:36 UTC by Alin M Elena
Modified: 2012-07-06 12:47 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alin M Elena 2011-04-09 12:36:16 UTC
Version:           git-latest (using Devel) 
OS:                Linux

contacts with no avatars set should show in the tooltip the pawn...
at the moment without it is inconsistent and makes the info bad formatted.

Alin

Reproducible: Didn't try




OS: Linux (x86_64) release 2.6.38-27-desktop
Compiler: gcc
Comment 1 Keith Rusler 2011-04-14 03:33:06 UTC
Okay, I submitted a patch to the review board. https://git.reviewboard.kde.org/r/101118/
Comment 2 Keith Rusler 2011-04-14 11:43:58 UTC
Git commit 73725a8df9f7625520381498991c255faf2aead8 by Keith Rusler.
Committed on 14/04/2011 at 11:49.
Pushed by karusler into branch 'master'.

Added default avatar to tooltips only if the contact has no default avatar else it will use the contacts avatar.

BUG: 270492

M  +13   -10   contact-delegate.cpp     

http://commits.kde.org/telepathy-contact-list/73725a8df9f7625520381498991c255faf2aead8