Added default avatar to tooltips only if the contact has no default avatar else it will use the contacts avatar.

BUG: 270492